# PhotoLibrary

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.txt  MauiApp1.sln  PhotoLibrary.sln  PhotoViewer.sln  README.md  firebird.targets  memo.txt
CommonLibrary/: CommonLibrary.csproj  nlog.config
CommonLibrary/Database/: AssemblyResolver.cs  FirebirdContext.cs  FirebirdContextFactory.cs
CommonLibrary/Database/Entities/: CustomRootEntry.cs  FileEntryCache.cs  FileEntryIndex.cs  ThumbnailCache.cs
CommonLibrary/DependencyInjection/: ServiceCollectionExtensions.cs
CommonLibrary/Extensions/: IEnumerableExtensions.cs  RuntimeInformationExtensions.cs
CommonLibrary/Files/: DirectoryCollection.cs  FileCollection.cs  ThumbnailLoader.cs
CommonLibrary/Migrations/: 20230108070242_v0001.Designer.cs  20230108070242_v0001.cs  20230108140147_v0001.Designer.cs  20230108140147_v0001.cs  20230129040329_v0001.Designer.cs  20230129133007_v0001.Designer.cs  20230129133007_v0001.cs  20230130110729_v0001.Designer.cs  20230130110729_v0001.cs  20230202135836_v0001.Designer.cs  20230202135836_v0001.cs  20230311145042_v0001.Designer.cs  20230311145042_v0001.cs  20230324154236_v0001.Designer.cs  20230324154236_v0001.cs  FirebirdContextModelSnapshot.cs
MauiApp1/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MauiApp1.csproj  MauiProgram.cs
MauiApp1/Controls/: AsyncImage.xaml  AsyncImage.xaml.cs  DirectoryView.xaml  DirectoryView.xaml.cs  ThumbnailView.xaml  ThumbnailView.xaml.cs
MauiApp1/Database/: FirebirdContext.cs
MauiApp1/Database/Entities/: ThumbnailCache.cs
MauiApp1/Models/: About.cs
MauiApp1/Pages/: DirectoryPage.xaml  DirectoryPage.xaml.cs  DirectoryView.xaml  DirectoryView.xaml.cs  ViewerRootPage.xaml
MauiApp1/Views/: AboutPage.xaml  AboutPage.xaml.cs  MainPage.xaml  MainPage.xaml.cs
PhotoLibrary/: App.xaml  App.xaml.cs  MauiProgram.cs  PhotoLibrary.csproj  Utils.cs
PhotoLibrary/Controls/: AsyncImage.xaml  AsyncImage.xaml.cs  CollectionViewEx.cs  ControlLoader.cs  DirectoryView.xaml  DirectoryView.xaml.cs  ThumbnailView.xaml  ThumbnailView.xaml.cs
PhotoLibrary/Models/: About.cs
PhotoLibrary/Pages/: DirectoryPage.xaml  DirectoryPage.xaml.cs  ErrorPage.xaml  ErrorPage.xaml.cs  InitialPage.xaml  InitialPage.xaml.cs  ItemViewerPage.xaml  ItemViewerPage.xaml.cs  RootShell.xaml  RootShell.xaml.cs  ViewerRootPage.xaml  ViewerRootPage.xaml.cs
PhotoLibrary/Pages/Configs/: CustomRootEditPage.xaml  CustomRootEditPage.xaml.cs  CustomRootPage.xaml  CustomRootPage.xaml.cs
PhotoLibrary/Views/: AboutPage.xaml  AboutPage.xaml.cs  MainPage.xaml  MainPage.xaml.cs
PhotoViewer/: App.xaml  App.xaml.cs  AppShell.xaml.cs  MauiProgram.cs  PhotoViewer.csproj  Utils.cs
PhotoViewer/Controls/: AsyncImage.xaml  AsyncImage.xaml.cs  CollectionViewEx.cs  CollectionViewEx.xaml  CollectionViewEx.xaml.cs  ControlLoader.cs  DirectoryView.xaml  DirectoryView.xaml.cs  ThumbnailView.xaml  ThumbnailView.xaml.cs
PhotoViewer/Models/: About.cs
PhotoViewer/Pages/: DirectoryPage.xaml  DirectoryPage.xaml.cs  InitialPage.xaml  InitialPage.xaml.cs  ItemViewerPage.xaml  ItemViewerPage.xaml.cs  RootShell.xaml  RootShell.xaml.cs  ViewerRootPage.xaml.cs
PhotoViewer/Pages/Configs/: CustomRootEditPage.xaml  CustomRootEditPage.xaml.cs  CustomRootPage.xaml  CustomRootPage.xaml.cs
PhotoViewer/Views/: AboutPage.xaml  AboutPage.xaml.cs  MainPage.xaml.cs
TestProject/: Initializer.cs  Startup.cs  TestProject.csproj
TestProject/Files/: ThumbnailLoaderTest.cs
